# TTK28-Courseware

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md
model/: flow_model.ipynb  torch_tutorial.ipynb
src/: flow_model.ipynb
